# serializer version: 1
# name: test_gateway_api_fail_disables_switch_entities
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Test Router Port 4 Internet Connected',
    }),
    'context': <ANY>,
    'entity_id': 'switch.test_router_port_4_internet_connected',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_gateway_connect_ipv4_switch
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Test Router Port 4 Internet Connected',
    }),
    'context': <ANY>,
    'entity_id': 'switch.test_router_port_4_internet_connected',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_gateway_port_change_disables_switch_entities
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Test Router Port 4 Internet Connected',
    }),
    'context': <ANY>,
    'entity_id': 'switch.test_router_port_4_internet_connected',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_gateway_port_poe_switch
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Test Router Port 5 PoE',
    }),
    'context': <ANY>,
    'entity_id': 'switch.test_router_port_5_poe',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_poe_switches
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Test PoE Switch Port 1 PoE',
    }),
    'context': <ANY>,
    'entity_id': 'switch.test_poe_switch_port_1_poe',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_poe_switches.1
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.test_poe_switch_port_1_poe',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Port 1 PoE',
    'platform': 'tplink_omada',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'poe_control',
    'unique_id': '54-AF-97-00-00-01_000000000000000000000001_poe',
    'unit_of_measurement': None,
  })
# ---
# name: test_poe_switches.2
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Test PoE Switch Port 2 (Renamed Port) PoE',
    }),
    'context': <ANY>,
    'entity_id': 'switch.test_poe_switch_port_2_renamed_port_poe',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_poe_switches.3
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.test_poe_switch_port_2_renamed_port_poe',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Port 2 (Renamed Port) PoE',
    'platform': 'tplink_omada',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'poe_control',
    'unique_id': '54-AF-97-00-00-01_000000000000000000000002_poe',
    'unit_of_measurement': None,
  })
# ---
